@@ -33,6 +33,7 @@ namespace Marvel {
         void setRenderCallback          (const std::string& callback) { m_renderCallback = callback; }
         void setResizeCallback          (const std::string& callback) { m_resizeCallback = callback; }
         void setMouseMoveCallback       (const std::string& callback) { m_mouseMoveCallback = callback; }
+        void setOnCloseCallback         (const std::string& callback) { m_onCloseCallback = callback; }
         void setMouseClickCallback      (const std::string& callback) { m_handleMouse    = true; m_mouseClickCallback = callback; }
         void setMouseDownCallback       (const std::string& callback) { m_handleMouse    = true; m_mouseDownCallback = callback; }
         void setMouseDoubleClickCallback(const std::string& callback) { m_handleMouse    = true; m_mouseDoubleClickCallback = callback; }
@@ -42,7 +43,6 @@ namespace Marvel {
         void setKeyDownCallback         (const std::string& callback) { m_handleKeyboard = true; m_keyDownCallback = callback; }
         void setKeyPressCallback        (const std::string& callback) { m_handleKeyboard = true; m_keyPressCallback = callback; }
         void setKeyReleaseCallback      (const std::string& callback) { m_handleKeyboard = true; m_keyReleaseCallback = callback; }
-
 
         [[nodiscard]] const std::string& getRenderCallback          () const { return m_renderCallback; }
         [[nodiscard]] const std::string& getResizeCallback          () const { return m_resizeCallback; }
@@ -56,6 +56,7 @@ namespace Marvel {
         [[nodiscard]] const std::string& getKeyReleaseCallback      () const { return m_keyReleaseCallback; }
         [[nodiscard]] const std::string& getMouseWheelCallback      () const { return m_mouseWheelCallback; }
         [[nodiscard]] const std::string& getMouseMoveCallback       () const { return m_mouseMoveCallback; }
+        [[nodiscard]] const std::string& getOnCloseCallback         () const { return m_onCloseCallback; }
 
     private:
 
@@ -72,6 +73,7 @@ namespace Marvel {
         std::string m_keyReleaseCallback;
         std::string m_resizeCallback;
         std::string m_mouseMoveCallback;
+        std::string m_onCloseCallback;
 
         bool   m_handleMouse    = false;
         bool   m_handleKeyboard = false;  
